# Xingxuan_Ops_MCP_Server

./: .gitattributes  .gitignore  LICENSE  LOGIN_INTEGRATION_TEST.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start_gateway.bat
config/: approval_identity.json  web_gateway.json
config/approvals/: README.md  policies.yaml
config/guardrails/: README.md  rules.yaml
docs/: README.md
docs/architecture/: APPROVAL_ENHANCEMENT_IMPLEMENTATION_PLAN.md  AUDIT_GUARDRAIL_ARCHITECTURE.md  (+10 more)
scripts/: install_astrbot_approvals_plugin.py  install_astrbot_filesystem_plugin.py  smoke_diagnostics.py  smoke_guardrails.py  smoke_write_tools.py  verify_approval_anchor.py  verify_approval_chain.py  verify_approval_console.py  verify_approval_identity.py  verify_approval_identity_config.py  verify_approval_lifecycle.py  verify_approval_policy.py  verify_approval_review_packet.py  verify_astrbot_isolated_live_ops_bridge.py  verify_astrbot_live_ops_bridge.py  verify_astrbot_ops_bridge_install.py  verify_astrbot_ops_bridge_sync.py  verify_astrbot_runtime_db_health.py  verify_audit_anchor.py  verify_audit_chain.py  verify_audit_productionization.py  verify_create_directory_flow.py  verify_create_file_flow.py  verify_execution_agent_profiles.py  verify_execution_post_checks.py  verify_guardrail_rules.py  verify_mcp_operations.py  verify_ops_bridge_mcp_dry_run.py  verify_ops_bridge_patterns.py  verify_ops_bridge_runtime.py  verify_quarantine_purge.py  verify_remote_execution_reference_flow.py  verify_remote_profile_bridge_flow.py  verify_web_gateway.py
(+92 files in other folders)
