[project]
name = "xingxuan-mcp-ops-server"
version = "0.1.0"
description = "星璇运维MCP：面向 Windows 和 Linux 的安全运维 MCP Server。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.8.0",
  "psutil>=5.9.8",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.0",
]

[project.scripts]
xingxuan-mcp-ops-server = "mcp_ops_server.main:run"
xingxuan-mcp-web-gateway = "mcp_ops_server.web_gateway:run"
tmp-mcp-ops-server = "mcp_ops_server.main:run"
tmp-mcp-web-gateway = "mcp_ops_server.web_gateway:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_ops_server"]
